--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,12 @@
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
+
+.centered-image {
+    position: relative;
+    display: block;
+    /* width: 200px; */
+    height: 200px;
+    margin: 0 auto;
+    object-fit: cover;
+}
