--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,14 @@
 * {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    padding: 0;
 }
 
-.centered-image {
+.mickey-image {
     position: relative;
     display: block;
     /* width: 200px; */
-    height: 200px;
+    height: 60vh;
     margin: 0 auto;
     object-fit: cover;
 }
